--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -14,7 +14,6 @@
     <nav class="navbar navbar-light bg-light justify-content-between"">
       <a class="navbar-brand" href="#">
         <img src="{{ url_for('static', filename='img/cachengo_logo.png') }}" height="30" width="119" alt="">
-        <img src="{{ url_for('static', filename='img/2000px-Orange_logo.svg.png') }}" height="60" width="60" alt="">
       </a>
       <div class="navbar-nav">
         <ul class="nav navbar-nav navbar-right">
@@ -36,10 +35,13 @@
           <label for="email">Email</label>
           <input type="email" class="form-control" id="email" placeholder="Enter email address">
         </div>
-        <div class="row">
-          <div class="col-lg-4" align="center">
-            <a href="#" id="start-camera">Touch here to start the camera</a>
-            <video id="camera-stream" height=400 width=400 class="invisible"></video>
+        <div class="row justify-content-center">
+          <div class="col-lg-4" >
+            <!-- <a href="#" id="start-camera">Touch here to start the camera</a> -->
+            <div id="vid_container">
+              <video id="video" class="" autoplay playsinline></video>
+              <canvas id="hiddenCanvas" class='hidden'></canvas>
+            </div>
             <p id="error-message"></p>
             <button class="btn btn-dark btn-lg" type="button" onclick="signUp()">Sign Up</button>
 
@@ -49,10 +51,23 @@
         </div>
       </form>
     </div>
+ <script src="{{ url_for('static', filename='js/ext/jquery.min.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/ext/bootstrap.min.js') }}"></script>
 
-    <script src="{{ url_for('static', filename='js/ext/jquery.min.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/int/DetectRTC.min.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/int/adapter.min.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/int/screenfull.min.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/int/howler.core.min.js') }}"></script>
+
+ <!-- <script src="{{ url_for('static', filename='js/int/main2.js') }}"></script> -->
+
+
+ <script src="{{ url_for('static', filename='js/int/camera.js') }}"></script>
+
+ <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/ext/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ext/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/int/camera.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script> -->
     </body>
 </html>
