add new camera API

--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -62,7 +62,7 @@
  <!-- <script src="{{ url_for('static', filename='js/int/main2.js') }}"></script> -->
 
 
- <script src="{{ url_for('static', filename='js/int/camera.js') }}"></script>
+ <script src="{{ url_for('static', filename='js/int/main.js') }}"></script>
 
  <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script>
     <!-- <script src="{{ url_for('static', filename='js/ext/jquery.min.js') }}"></script>
