--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,46 +20,31 @@
           <button class="btn btn-dark btn-lg" type="button" onclick="relocate('/sign_up')">Sign Up</button>
         </ul>
       </div>
-    </nav>
-    
+    </nav> 
     <div id="app container">
-
       <div class=" mt-5 mx-3 row justify-content-center">
         <div class='col-12'>
           <h3 class="text-center">Sign In</h3>
         </div>
-
         <div class="col-lg-6 ">
           <div id="vid_container">
             <video id="video" class="" autoplay playsinline></video>
             <canvas id="hiddenCanvas" class='hidden'></canvas>
           </div>
-        </div>
-
+        </div>    
         <div class='col-12'></div>
-
         <div class=''>
           <button id="take-photo" class="btn btn-light btn-lg" type="button" onclick="login()">Login</button>
         </div>
       </div>
-
     </div>
-
 
     <script src="{{ url_for('static', filename='js/ext/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ext/bootstrap.min.js') }}"></script>
-    
-    <script src="{{ url_for('static', filename='js/int/DetectRTC.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/int/adapter.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/int/screenfull.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/int/howler.core.min.js') }}"></script>
-
-    <!-- <script src="{{ url_for('static', filename='js/int/main2.js') }}"></script> -->
-
-
-    <!-- <script src="{{ url_for('static', filename='js/int/camera.js') }}"></script> -->
+    <script src="{{ url_for('static', filename='js/ext/DetectRTC.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ext/adapter.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/int/main.js') }}"></script>
-
-    <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script>
-    </body>
+    <script src="{{ url_for('static', filename='js/int/navigation.js') }}"></script> 
+  
+  </body>
 </html>
